reinstalled sway and found some waste

--- a/sway/config
+++ b/sway/config
@@ -113,15 +113,16 @@ titlebar_padding 1
 titlebar_border_thickness 0
 
 exec {
-    /usr/libexec/pam_kwallet_init
+    # /usr/libexec/pam_kwallet_init
     foot --server
     firefox
     nm-applet
     blueman-applet
-    nextcloud --background
+    # nextcloud --background
     pasystray
-    kwalletd6
+    # kwalletd6
     dunst
+    emacs --daemon
 }
 
 include /etc/sway/config.d/*
