--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @plugin 'egel/tmux-gruvbox'
 
-set -g @tmux-gruvbox 'light' # or 'dark256', 'light', 'light256'
+set -g @tmux-gruvbox 'dark' # or 'dark255', 'light', 'light256'
 # set -g @colors-solarized 'dark'
 
 #custom 
