--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,7 @@ set -g @tmux-gruvbox 'dark' # or 'dark255', 'light', 'light256'
 # set -g @colors-solarized 'dark'
 
 #custom 
-set -g status-position top
+set -g status-position bottom
 set -g status-right '%d/%m - %H:%M'
 set -g status-left ''
 set -g base-index 1
